# SKIio

./: .gitignore  LICENSE  README.md  build-examples.py  pyproject.toml
docs/: DETAILS.md  PURR.md  SKIIO.md
examples/: echo-server.purr  echo-server.ski  fizz-buzz.purr  fizz-buzz.ski  fizzbuzz.purr  fizzbuzz.ski  hello-world.purr  hello-world.ski  rot-strings.purr  rot-strings.ski
skiio/: __init__.py  __main__.py  _compiler_purr.py  _compiler_ski.py  _exceptions.py  _intepreter.py  _interpreter.py  _rule.py  _skinode.py
skiio/utils/: skibyte.py
