[tool.poetry]
name = "skiio"
version = "0.1.0"
description = "A \"practical\" ski compiler with I/O"
authors = ["Julia <julia.poo.poo.poo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "*" # Maybe I'll eventually write tests
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
