[tool.poetry]
name = "skiio"
version = "1.0.2"
description = "An esolang that extends SKI combinators with I/O. Interpreter and Compiler from lambda expressions implemented"
readme = "README.md"
authors = ["Julia <julia.poo.poo.poo@gmail.com>"]
license = "MIT"

packages = [
    { include = "skiio" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "*" # Maybe I'll eventually write tests
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
